test/files/neg/t0764.check
t0764.scala:14: error: type mismatch;
 found   : Node{type T = _1.type} where val _1: Node{type T = NextType}
 required: Node{type T = NextType}
  def wrong: Node { type T = NextType } = pre
                                          ^
t0764.scala:16: error: type mismatch;
 found   : Node{type T = _1.type} where val _1: Node{type T = NextType}
 required: Node{type T = Main.this.AType}
    (which expands to)  Node{type T = Node{type T = NextType}}
  new Main[AType](pre)
                  ^
two errors found
